	  for debugging purposes.
	* Changed: Added Response::getStatusText(). This method returns the
	  human-readable HTTP status message. This part has been removed from
	  Response::getStatus(), which now always returns just the status code as
	  an int.
	* Changed: Response::send() is now Sapi::sendResponse($response).
	* Changed: Request::createFromPHPRequest is now Sapi::getRequest().

2.0.0alpha5 (2013-11-07)
	* Added: HTTP Status 451 Unavailable For Legal Reasons. Fight government
	  censorship!
	* Added: Ability to catch and retry http requests in the client when a
	  curl error occurs.
	* Changed: Request::getPath does not return the query part of the url, so
	  everything after the ? is stripped.
	* Added: a reverse proxy example.

2.0.0alpha4 (2013-08-07)
	* Fixed: Doing a GET request with the client uses the last used HTTP
	  method instead.
	* Added: HttpException
	* Added: The Client class can now automatically emit exceptions when HTTP
	  errors occurred.

2.0.0alpha3 (2013-07-24)
	* Changed: Now depends on sabre/event package.
	* Changed: setHeaders() now overwrites any existing http headers.
	* Added: getQueryParameters to RequestInterface.
	* Added: Util::negotiate.
	* Added: RequestDecorator, ResponseDecorator.
	* Added: A very simple HTTP client.
	* Added: addHeaders() to append a list of new headers.
	* Fixed: Not erroring on unknown HTTP status codes.
	* Fixed: Throwing exceptions on invalid HTTP status codes (not 3 digits).
	* Fixed: Much better README.md
	* Changed: getBody() now uses a bitfield to specify what type to return.

2.0.0alpha2 (2013-07-02)
	* Added: Digest & AWS Authentication.
	* Added: Message::getHttpVersion and Message::setHttpVersion.
	* Added: Request::setRawServerArray, getRawServerValue.
	* Added: Request::createFromPHPRequest
	* Added: Response::send
	* Added: Request::getQueryParameters
	* Added: Utility for dealing with HTTP dates.
	* Added: Request::setPostData and Request::getPostData.